# python-project-49

./: Makefile  README.md  build.cast  pyproject.toml
brain_games/: cli.py  engine_game.py  game_rules.py
brain_games/games/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
